# OptiX_PyTorch_Extension

./: CMakeLists.txt  compile_commands.json  main.py  optix_programs.ptx  samplearch.py  setup.py  test.py  test2.py  test_default.py
cuda/: helpers.h
models/bt/: test_bb_model.mtl
models/elevato4/: 1.blend  2.mtl
models/gun/: gun.mtl
models/scene/Hallway/: Hallway.mtl
models/scene/HallwayDoor/: HallwayDoor.mtl
models/scene/Lift/: Lift.mtl
models/scene/LiftDoor/: LiftDoorRight.mtl
models/scene/LiftTB/: LiftTB.mtl
models/simple_studio_light/: light.mtl  untitled.blend
models/test/: untitled.blend  untitled.mtl
old/: optix_programs.cu  renderer.cu  renderer.h
python/: GLTFLoader.py
python/animation/: __init__.py  animation.py
python/controllers/: GamepadController.py  InputController.py  KeyboardController.py
python/elevator/: AnimatableObject.py  Door.py  Elevator.py  Hallway.py
python/loaders/: GLTFLoader.py  Model.py  ModelInstance.py  ModelLoader.py  OBJLoader.py  TextureLoader.py
python/models/: Camera.py  Player.py  SelectionWheel.py  test_wheel.py  text.py
src/: OptixRenderer.cpp  OptixRenderer.h  TextureObject.cpp  TextureObject.h  common.h  cube.h  optixDynamicGeometry.h  vertices.cu  vertices.h
src/kernels/: optix.cu  optixDynamicGeometry.cu  optixDynamicGlass.cu  optixDynamicGlassTexture.cu  optixPathTracer.cu  optixPathTracer.h
sutil/: CUDAOutputBuffer.h  Camera.h  Exception.h  Matrix.h  sampleConfig.h  vec_math.h
